--- a/store/blocks/header/header.jsonc
+++ b/store/blocks/header/header.jsonc
@@ -8,7 +8,28 @@
   },
 
   "header-layout.desktop": {
-    "children": ["sticky-layout#desktop"]
+    "children": ["flex-layout.row#demo-store-warning", "sticky-layout#desktop"]
+  },
+
+  "flex-layout.row#demo-store-warning": {
+    "props": {
+      "blockClass": "demo-store-warning",
+      "fullWidth": true
+    },
+    "children": ["flex-layout.col#demo-store-warning"]
+  },
+
+  "flex-layout.col#demo-store-warning": {
+    "children": ["rich-text#demo-store-warning"]
+  },
+
+  "rich-text#demo-store-warning": {
+    "props": {
+      "text": "Atenção! Esta é uma loja de demonstração da plataforma VTEX. Os produtos, preços e entregas são meramente ilustrativos.",
+      "textPosition": "CENTER",
+      "textColor": "c-action-primary",
+      "blockClass": "demo-store-warning"
+    }
   },
 
   "sticky-layout#desktop": {
@@ -41,6 +62,7 @@
       "drawer",
       "flex-layout.col#logo-desktop",
       "flex-layout.col#search-bar",
+      "link#quickOrder",
       "login",
       "minicart.v2"
     ]
@@ -120,13 +142,13 @@
     "props": {
       "title": "Logo",
       "href": "/",
-      "url": "assets/icons/logoB2B.svg",
+      "url": "assets/icons/VTEX-Fashion-B2B.svg",
       "width": "123"
     }
   },
 
   "header-layout.mobile": {
-    "children": ["sticky-layout#mobile"]
+    "children": ["flex-layout.row#demo-store-warning", "sticky-layout#mobile"]
   },
 
   "sticky-layout#mobile": {
@@ -211,13 +233,13 @@
 
   "login": {
     "props": {
-      "iconLabel": "Hello, Sign in"
+      "iconLabel": "Entrar"
     }
   },
 
   "login#mobile": {
     "props": {
-      "iconLabel": "Sign in"
+      "iconLabel": "Entrar"
     }
   }
 }
