feat: pure version of b2b-user-widget on header, top banner, shop by category section and trendings section

--- a/store/blocks/components/popular-picks.jsonc
+++ b/store/blocks/components/popular-picks.jsonc
@@ -40,7 +40,7 @@
   },
   "link#popularLink": {
     "props": {
-      "label": "See more",
+      "label": "Veja mais",
       "href": "/popular",
       "blockClass": "popularLink"
     }
