--- a/store/blocks/product/location-availability.jsonc
+++ b/store/blocks/product/location-availability.jsonc
@@ -42,7 +42,7 @@
   "rich-text#modal-trigger-shipping-availability": {
     "props": {
       "blockClass": ["modal-trigger-shipping-availability"],
-      "text": "See more shipping options",
+      "text": "Veja mais opções de envio",
       "font": "t-small",
       "textColor": "c-on-action-secondary"
     }
