--- a/manifest.json
+++ b/manifest.json
@@ -79,7 +79,9 @@
     "vtex.sku-list": "1.x",
     "vtex.condition-layout": "2.x",
     "vtex.seller-selector": "0.x",
-    "vtex.store-newsletter": "1.x"
+    "vtex.store-newsletter": "1.x",
+    "vtex.b2b-organizations": "1.x",
+    "vtex.category-menu": "2.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
