--- a/store/blocks/minicart.jsonc
+++ b/store/blocks/minicart.jsonc
@@ -133,7 +133,7 @@
   },
   "link#quote": {
     "props": {
-      "label": "Create a Quote",
+      "label": "Criar uma cotação",
       "displayMode": "button",
       "blockClass": ["vtex-button","order-quote"],
       "href": "/b2b-quotes/create"
