--- a/store/blocks/popular.jsonc
+++ b/store/blocks/popular.jsonc
@@ -64,7 +64,7 @@
 
   "rich-text#title--popular": {
     "props": {
-      "text": "## Popular Picks",
+      "text": "## Produtos Populares",
       "blockClass": "title"
     }
   }
