--- a/store/blocks/product-summary.jsonc
+++ b/store/blocks/product-summary.jsonc
@@ -21,12 +21,12 @@
     },
     "children": [
       "flex-layout.row#stackSavings",
-      "product-summary-brand",
+      // "product-summary-brand",
       "product-summary-name",
-      "product-rating-summary",
+      // "product-rating-summary",
       "check-permission#product-summary-price",
-      "check-permission#product-summary-buy-button",
-      "add-to-list-btn",
+      // "check-permission#product-summary-buy-button",
+      // "add-to-list-btn",
       "modal-trigger#quickview"
     ]
   },
@@ -69,7 +69,7 @@
   "stack-layout#summary": {
     "children": [
       "product-summary-image",
-      "product-price-savings#summary",
+      // "product-price-savings#summary",
       "product-price-savings#discount"
     ],
     "props": {
