--- a/store/blocks/product/seller-name.jsonc
+++ b/store/blocks/product/seller-name.jsonc
@@ -5,7 +5,7 @@
   "product-seller-name#default": {
     "props": {
       "blockClass": ["default"],
-      "message": "Sold by {sellerName}"
+      "message": "Vendido por {sellerName}"
     }
   }
 }
